# MathGL2-CMake-example

./: CMakeLists.txt  README.md
src/: mathgl_plot_to_PNG.cpp
