CMAKE_MINIMUM_REQUIRED(VERSION 3.0.0)

PROJECT("MathGL2-CMake")

SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} --std=c++11")

FIND_PACKAGE(MathGL2 REQUIRED)
IF(MATHGL2_FOUND)
    INCLUDE_DIRECTORIES(${MATHGL2_INCLUDE_DIRS})
    SET(LIBS ${LIBS} ${MATHGL2_LIBRARIES})
    ADD_EXECUTABLE(mgl2PNG src/mathgl_plot_to_PNG)
    TARGET_LINK_LIBRARIES(mgl2PNG ${LIBS})
ELSE(MATHGL2_FOUND)
MESSAGE(STATUS "MathGL2 Not found")
ENDIF(MATHGL2_FOUND)

# Debug information
MESSAGE(STATUS "USING MathGL ${MATHGL2_INCLUDE_DIRS}")
MESSAGE(STATUS "USING LIBS ${LIBS}")
MESSAGE(STATUS "USING MODULEs ${CMAKE_MODULE_PATH}")    
